--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>bienbenido a la pagina de emiliuss</h1>
-    <h2>los 10 videojuegos mas vistos del mundo>/h2>
+    <h2>los 10 videojuegos mas vistos del mundo</h2>
       <p>Los 10 videojuegos mas vistos del mundo en es este año son</p>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/gBdII_fxJtE" frameborder="0" allowfullscreen></iframe>
   </body>
