--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>emiliuss</title>
   </head>
   <body>
-    <h1>bienbenido a la pagina de emiliuss</h1>
+    <h1>bienvenido a la pagina de emiliuss</h1>
     <h2>los 10 videojuegos mas vistos del mundo</h2>
       <p>Los 10 videojuegos mas vistos del mundo en es este año son</p>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/gBdII_fxJtE" frameborder="0" allowfullscreen></iframe>
