--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html> 
   <head>
     <title>emiliuss</title>
+    <link src="estilos.css"></link>
   </head>
   <body>
     <h1>bienvenido a la pagina de emiliuss</h1>
