--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
   <head>
     <title>emiliuss</title>
-    <link href="estilos.css"></link>
+    <link rel="stylesheet" type="text/css" href="estilos.css"></link>
   </head>
   <body>
     <h1>bienvenido a la pagina de emiliuss</h1>
