--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" type="text/css" href="estilos.css"></link>
   </head>
   <body>
-    <div id="menuPrincipal"><a href="quienSoy.html">Quien Soy</a>
+    <div id="menuPrincipal">
+      <a href="index.html>Inicio</a>
+      <a href="quienSoy.html">Quien Soy</a>
+      <a href="historias.html">Histirias</a>
     </div> 
   </body>
   
