--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="menuPrincipal">
       <a href="index.html>Inicio</a>
       <a href="quienSoy.html">Quien Soy</a>
-      <a href="historias.html">Histirias</a>
+      <a href="historias.html">Historias</a>
     </div> 
   </body>
   
