--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <a href="index.html>Inicio</a>
       <a href="quienSoy.html">Quien Soy</a>
       <a href="historias.html">Historias</a>
+      <a href="contactos.html">Contactos</a>
     </div> 
   </body>
   
