--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="menuPrincipal">
-      <a href="index.html>Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="quienSoy.html">Quien Soy</a>
       <a href="historias.html">Historias</a>
       <a href="contactos.html">Contactos</a>
