--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <a href="historias.html">Historias</a>
       <a href="contactos.html">Contactos</a>
     </div> 
+    <div id="banner">
+      <h1>esta es la pagina del conocimiento</h1>
+    </div>  
   </body>
   
 </html>
