--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <a href="contactos.html">Contactos</a>
     </div> 
     <div id="banner">
-      <h1>esta es la pagina del conocimiento</h1>
+      <h1>ESTA ES LA PAGINA DEL CONOCIMIENTO</h1>
+      <h2>encuentra historias,informacion sobre el mundo</h2> 
     </div>  
   </body>
   
