--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <div id="banner">
       <h1>ESTA ES LA PAGINA DEL CONOCIMIENTO</h1>
       <h2>encuentra historias,informacion sobre el mundo</h2> 
-    </div>  
+    </div> 
+    <article>
+    <h3>mi historia sobre spiderman</h3>
+      <p>   
+Había una vez un joven  llamado Peter Parker , un día se fue con su amigo HARRY , el era el que le protegía por que le molestaban mucho en la escuela;  entonces  se fueron al museo de ciencias y un día la chica que  le gustaba le pidió que le tomara una foto por que el era fotógrafo y cuando le pico una araña  en la mano y el no se preocupo, cuando llego a casa no quería comer nada solo dormir y se fue a su habitación.
+Al siguiente día le salió  por la picadura  de la araña abdominales y se fue a clase , a la hora del almuerzo ,sin querer salió telaraña de sus dedos y con la telaraña  cogió un plato y le mancho a flash a si se llamaba el chico que le molestaba y él se fue corriendo y cuando vio sus dedos tenía algo raro entonces comenzó a escalar una casa de ladrillos  y llego hasta arriba comenzó a saltar  las casas  y también veía la postura para lanzar la telaraña al principio no podía lanzar después puso una postura como roquero  y lanzo , se balanceo y se golpeo la cara
+Luego el tío le dejo en la escuela y antes de bajarse le dijo el tío esta frase: un gran poder con lleva una gran responsabilidad y  le dijo que no le moleste además se bajo del carro y no se fue a la escuela , tenía un traje para competir e ganar un carro para impresionar a la chica que le quería entonces se fue a competir y el ganó y fue a reclamar el dinero y salió también y después  entro un ladrón donde el señor que tenía el dinero y le robo el dinero
+      </p>  
+    </article>  
   </body>
   
 </html>
