--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <article>
     <h3>la experiencia en crear una pagina web</h3>
       <p>
-      mi primera pagina que creo y me parece interesante no es como uno piensa que solo pones imagenes y todo es con codigo me ayudo almaginet a quear y ahorra yo creare muchas informacion sobre todo informaion como informacion sobre las peliculas ,animales
+      mi primera pagina que creo y me parece interesante no es como uno piensa que solo pones imagenes y todo es con codigo me ayudo almaginet a crear y ahora yo creare muchas informacion sobre todo como informacion sobre las peliculas ,animales
       y lo mas importante la tecnologia que sigue avanzando dia a dia la tecnologia a hido revolucionando en el mundo que vivimos, lo mas importante tienes que saber como utilizar el internet para bien no para mal 
       </p>  
     </article>  
